src/objects/Portal_Notices__c.object
<CustomObject>
    <description>Object to create and manage &quot;Important Message&quot; section portal notices for the customer portal</description>
    <fields>
        <fullName>Body_Short__c</fullName>
        <label>Body Short</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>General_Notices__c</fullName>
        <defaultValue>false</defaultValue>
        <label>General Notices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manager_Notices__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manager Notices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>911</fullName>
                </value>
                <value>
                    <fullName>EMS</fullName>
                </value>
                <value>
                    <fullName>ETI</fullName>
                </value>
                <value>
                    <fullName>IMC</fullName>
                </value>
                <value>
                    <fullName>Inform</fullName>
                </value>
                <value>
                    <fullName>LETG</fullName>
                </value>
                <value>
                    <fullName>Tiburon</fullName>
                </value>
                <value>
                    <fullName>VisiNet</fullName>
                </value>
                <value>
                    <fullName>VisionAIR</fullName>
                </value>
                <value>
                    <fullName>Zuercher</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Portal Notice</label>
    <nameField>
        <displayFormat>PN-{00000}</displayFormat>
        <label>Portal Notices ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Portal Notices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>